<resources>
  <string name="app_name">Popular Movies</string>
  <string name="MovieName">MovieName</string>
  <string name="movie_title">Movie Title</string>
  <string name="release_date">Release Date</string>
  <string name="average_rating">Average Rating</string>
  <string name="plot_synopsis">Plot Synopsis</string>
  <string name="sort_movies">SORT</string>
  <string name="sort_popularity">Most Popular</string>
  <string name="sort_top_rated">Highest Rated</string>
  <string name="movie_trailer_title">Trailers</string>
  <string name="reviews">Reviews</string>
  <string name="favouriteButtonText">Add to Favourites</string>
  <string name="Unfavourite">Unfavourite</string>
  <string name="Favourite">Favourite</string>
  <string name="Favourites">Favourites</string>
</resources>