<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity"
    >

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="10dp"
      android:padding="10dp"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >

      <ImageView
          android:id="@+id/movie_thumbnail"
          android:layout_width="125dp"
          android:layout_height="170dp"
          android:background="#2d2d2d"
          android:scaleType="centerCrop"
          />

      <Button
          android:id="@+id/favourite"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/favouriteButtonText"
          android:padding="8dp"
          android:textColor="#ffffff"
          android:background="#3700B3"
          android:layout_marginTop="8dp"
          android:textStyle="bold"
          android:clickable="true"
          android:focusable="true">
      </Button>

      <TextView
          android:id="@+id/movie_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="@string/movie_title"
          android:textSize="18sp"
          android:textStyle="bold"
          />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/release_date"
            />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#edecec"
            android:padding="8dp"
            android:text="@string/release_date"
            />
      </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:padding="8dp"
          android:text="@string/average_rating"
          />
      <TextView
          android:id="@+id/average_rating"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="#edecec"
          android:padding="8dp"
          android:text="@string/average_rating"
          />
    </LinearLayout>

      <TextView
          android:id="@+id/synopsis"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:background="#edecec"
          android:padding="8dp"
          android:text="@string/plot_synopsis"
          />

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/trailerLayout"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="vertical">

          <TextView
              android:id="@+id/trailer"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:padding="8dp"
              android:text="@string/movie_trailer_title"
              android:textStyle="bold"
              />

          <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/trailerRecyclerView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:padding="8dp"
              />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/trailerLayout">

          <TextView
              android:id="@+id/reviews"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:padding="8dp"
              android:text="@string/reviews"
              android:textStyle="bold"
              />

          <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/reviewRecyclerView"
              android:layout_width="match_parent"
              android:layout_height="240dp"
              android:layout_marginTop="10dp"
              android:padding="8dp"
              />
        </LinearLayout>
      </RelativeLayout>
    </LinearLayout>
  </ScrollView>
</RelativeLayout>